# storage/api-docs/api-docs.json
@@ -464,6 +464,117 @@
                 }
             }
         },
+        "/api/v1/projects/{id}/tasks": {
+            "post": {
+                "tags": [
+                    "Tasks"
+                ],
+                "summary": "Create a new task for a project",
+                "description": "Creates a new task associated with a specific project",
+                "operationId": "1913cefcd033730e64c3f76b292c9dea",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the related project",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "title",
+                                    "projects_teams_id"
+                                ],
+                                "properties": {
+                                    "title": {
+                                        "description": "Title of the task",
+                                        "type": "string"
+                                    },
+                                    "description": {
+                                        "description": "Description of the task",
+                                        "type": "string"
+                                    },
+                                    "projects_teams_id": {
+                                        "description": "ID of the related team",
+                                        "type": "integer"
+                                    },
+                                    "docs": {
+                                        "description": "Documentation file",
+                                        "type": "file"
+                                    },
+                                    "lists_id": {
+                                        "description": "ID of the related list",
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "description": "ULID of the created task",
+                                            "type": "string"
+                                        },
+                                        "title": {
+                                            "description": "Title of the created task",
+                                            "type": "string"
+                                        },
+                                        "description": {
+                                            "description": "Description of the created task",
+                                            "type": "string"
+                                        },
+                                        "projects_teams_id": {
+                                            "description": "ID of the related team",
+                                            "type": "integer"
+                                        },
+                                        "docs": {
+                                            "description": "Documentation file",
+                                            "type": "file"
+                                        },
+                                        "lists_id": {
+                                            "description": "ID of the related list",
+                                            "type": "integer"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "0": {
+                            "securityScheme": "bearerAuth",
+                            "type": "http",
+                            "name": "Authorization",
+                            "in": "header",
+                            "scheme": "bearer"
+                        }
+                    }
+                ]
+            }
+        },
         "/api/v1/team-invites/invite": {
             "post": {
                 "tags": [
@@ -863,6 +974,10 @@
         {
             "name": "Projects",
             "description": "Projects"
+        },
+        {
+            "name": "Tasks",
+            "description": "Tasks"
         },
         {
             "name": "Teams",
